--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,7 +5,7 @@
 
 .container-fluid {
     max-width: 1460px;
-    padding: 10px;
+    padding-left: 10px;
     padding-right: 10px;
     margin: 0 auto;
 }
@@ -21,3 +21,4 @@
     letter-spacing: -0.035em;
     color: #62D0DF;
 }
+
