--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -6,9 +6,9 @@ line-height: 1.5em;
 }
 
 %text-font {
-    font-family: Larsseit_regular;
+    font-family: Larsseit_regular, sans-serif;
     font-size: 1.5rem;
-}
+   }
 
 $light: #FFFFFF;
 
