--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -86,7 +86,7 @@
 .main {
     display: grid;
     grid-area: main;
-    grid-template: minmax(760px, auto) minmax(607px, auto) minmax(366px, auto) minmax(2096px, auto) minmax(800px, auto) minmax(800px, auto) minmax(460px, auto) / 1fr;
+    grid-template: minmax(607px, auto) minmax(366px, auto) minmax(2096px, auto) minmax(800px, auto) minmax(800px, auto) minmax(460px, auto) / 1fr;
 }
 
 .description {
@@ -156,7 +156,7 @@
         transform: rotate(329deg) translate(-35px, 0px);
         z-index: -1;
         position: relative;
-           }
+    }
 
     &__img-container {
         width: 145%;
@@ -165,6 +165,61 @@
         background-repeat: no-repeat;
         transform: rotate(32deg) translate(-396px, 19px);
         background-size: cover;
+    }
+}
+
+.cause {
+    background-color: #62D0DF;
+    margin-left: -10px;
+
+    &__container {
+        margin-left: 11.2rem;
+        display: grid;
+        grid-template:  1fr / 58.5% 1fr;
+    }
+
+    &__description {
+        display: flex;
+        flex-direction: column;
+        padding-right: 11.3rem;
+    }
+
+    &__slogan {
+        font-family: Larsseit_bold, sans-serif;
+        color: $light;
+        font-size: 2.25rem;
+        line-height: 0.64em;
+        letter-spacing: -0.006em;
+        padding-top: 4.19em;
+        padding-bottom: 2.08em;
+    }
+
+    &__text {
+        @extend %text-font;
+        color: $light;
+        line-height: 1.58em;
+        padding-bottom: 5.75rem;
+    }
+
+    &__text--small {
+        font-size: 1.25rem;
+        line-height: 1.6em;
+
+    }
+
+    &__img-wrap {
+        position: relative;
+        padding: 0 0 90% 0;
+    }
+
+    &__img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
     }
 }
 
