--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,8 +5,8 @@
 
 .container-fluid {
     max-width: 1460px;
-    padding-left: 10px;
-    padding-right: 10px;
+    // padding-left: 10px;
+    // padding-right: 10px;
     margin: 0 auto;
 }
 
