--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,24 +5,19 @@
 
 .wrapper {
     display: grid;
-    grid-template: minmax(840px, auto) 1fr minmax(80px, auto) /1fr;
+    grid-template: minmax(80px, auto) 1fr minmax(80px, auto) /1fr;
     grid-template-areas:
-        "wrap"
+        "header"
         "main"
         "footer";
 }
 
-.wrap {
-    overflow: hidden;
-    grid-area: wrap;
-
-}
-
 .header {
     display: grid;
+    grid-area: header;
 
     &__container {
-        margin-left: 11.2rem;
+               margin-left: 11.2rem;
         margin-right: 8.1rem;
         padding-top: 1.7rem;
         display: flex;
@@ -83,20 +78,24 @@
     }
 }
 
+.main {
+    grid-area: main;
+}
+
 .description {
     &__container {
         margin-left: 11.2rem;
         display: grid;
-        grid-template: minmax(760px, auto) / repeat(auto-fit, minmax(500px, 1fr));
+        grid-template: minmax(765px, auto) / repeat(auto-fit, minmax(500px, 1fr));
+        overflow-x: clip;
     }
 
     &__content {
         display: grid;
         grid-auto-flow: row;
-        grid-template: minmax(64px, auto) minmax(167px, auto) minmax(161px, auto) 1fr / 1fr;
-        margin-top: 6.8em;
-        position: relative;
-        z-index: 2;
+        grid-template: minmax(64px, auto) 1fr minmax(161px, auto) 1fr / 1fr;
+        margin-top: 10.2rem;
+
     }
 
     &__slogan {
@@ -142,7 +141,6 @@
     }
 
     &__img-wrapper {
-        // display: grid;
         width: 50rem;
         height: 34.06rem;
         border-radius: 312px;
@@ -157,15 +155,9 @@
         height: 140%;
         background: linear-gradient(213.71deg, #FFFFFF 11.23%, rgba(255, 255, 255, 0) 48.4%), url('../images/description-img2.png');
         background-repeat: no-repeat;
-        transform: rotate(32deg) translate(-396px, 19px);
+        transform: rotate(32deg) translate(-380px, 4px);
         background-size: cover;
     }
-}
-
-.main {
-    display: grid;
-    grid-area: main;
-    grid-template: minmax(607px, auto) minmax(366px, auto) minmax(2096px, auto) minmax(800px, auto) minmax(800px, auto) minmax(460px, auto) / 1fr;
 }
 
 .cause {
@@ -173,7 +165,7 @@
     &__container {
         margin-left: 11.2rem;
         display: grid;
-        grid-template: 1fr / 58.5% 1fr;
+        grid-template: 1fr / 58.5% minmax(525px, 1fr);
     }
 
     &__description {
@@ -247,140 +239,244 @@
     }
 }
 
-.planning {
-    display: flex;
-    flex-direction: column;
+// .planning {
+//     display: flex;
+//     flex-direction: column;
+
+//     &__title {
+//         color: rgba(34, 53, 111, 0.5);
+//         text-align: center;
+//         margin-bottom: 1.5rem;
+//     }
+
+//     &__items {
+//         display: grid;
+//         grid-template-columns: repeat(4, 360px);
+//         grid-auto-rows: 360px;
+//         margin-bottom: 7.5rem;
+
+//     }
+
+//     &__item {
+//         padding-top: 4.5rem;
+//         padding-left: 4.88rem;
+//         padding-right: 3.13rem;
+//     }
+
+//     &__item:first-child {
+//         background-color: #FFE2DE;
+//     }
+
+//     &__item:nth-child(2) {
+//         background-color: #C4E769;
+//     }
+
+//     &__item:nth-child(3) {
+//         background-color: #62D0DF;
+//     }
+
+//     &__item:last-child {
+//         background-color: #0052C1;
+//     }
+
+//     &__slogan {
+//         display: inline-block;
+//         font-family: Larsseit_bold, sans-serif;
+//         color: $light;
+//         font-size: 2rem;
+//         line-height: 1.2em;
+//         letter-spacing: -0.006em;
+//         padding-top: 0.72em;
+//         position: relative;
+
+//         &::before {
+//             content: '';
+//             position: absolute;
+//             top: 0;
+//             left: -25.5px;
+//             height: 1px;
+//             width: 255px;
+//             background-color: #fff;
+//         }
+
+//         &::after {
+//             content: "";
+//             position: absolute;
+//             left: -20px;
+//             top: 33px;
+//             background-color: #E9B730;
+//             width: 9px;
+//             height: 9px;
+//             border-radius: 50%;
+//         }
+//     }
+
+//     &__items--big {
+//         display: grid;
+//         grid-template-columns: repeat(3, 480px);
+//         grid-auto-rows: 480px;
+//     }
+
+//     &__item--big {
+//         padding-top: 6rem;
+//         padding-left: 6.5rem;
+//         padding-right: 13.69rem;
+//     }
+
+//     &__item--big:first-child {
+//         background-color: #22356F;
+//     }
+
+//     &__item--big:nth-child(2) {
+//         background-color: #0052C1;
+//     }
+
+//     &__item--big:nth-child(3) {
+//         background: url(../images/planning-img.png) no-repeat;
+//     }
+
+//     &__item--big:nth-child(4) {
+//         background-color: #62D0DF;
+//     }
+
+//     &__item--big:nth-child(5) {
+//         background-color: #DEE1FF;
+//     }
+
+//     &__item--big:last-child {
+//         background-color: #8F00FF;
+//     }
+
+//     &__slogan--big {
+//         padding-top: 0.94em;
+//         position: relative;
+//     }
+
+//     &__slogan.planning__slogan--big {
+//         &::before {
+//             content: '';
+//             position: absolute;
+//             top: 0;
+//             left: -34px;
+//             height: 1px;
+//             width: 340px;
+//             background-color: #fff;
+//         }
+
+//         &::after {
+//             content: "";
+//             position: absolute;
+//             left: -30px;
+//             top: 40px;
+//             background-color: #E9B730;
+//             width: 12px;
+//             height: 12px;
+//             border-radius: 50%;
+//         }
+//     }
+
+//     &__cards {
+//         display: grid;
+//         grid-template-columns: repeat(3, 1fr);
+//     }
+
+//     &__card {
+//         padding: 3.44rem 4.81rem 4.81rem 6.56rem;
+//         color: $default;
+//         font-family: Larsseit_regular, sans-serif
+//     }
+
+//     &__card-title {
+//         font-family: inherit;
+//         font-size: 1.75rem;
+//         line-height: 1.25em;
+//         margin-bottom: 1.75em;
+//     }
+
+//     &__card-text {
+//         font-family: inherit;
+//         font-size: 1rem;
+//         line-height: 1.69em;
+//         letter-spacing: -0.03em;
+//         color: rgba(34, 53, 111, 0.5);
+
+//     }
+// }
+
+.addition {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    color: $default;
+
+    // &__img-wrap{
+    //     position: relative;
+    //     padding: 0 0 90% 0;
+    //     min-height: 800px;
+    // }
+
+    // &__img{
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     object-fit: cover;
+    // }
 
     &__title {
-        color: rgba(34, 53, 111, 0.5);
-        text-align: center;
-        margin-bottom: 1.5rem;
+        color: inherit;
+        margin-bottom: 14.06em;
     }
 
-    &__items {
-        display: grid;
-        grid-template-columns: repeat(4, 360px);
-        grid-auto-rows: 360px;
-        margin-bottom: 7.5rem;
-
+    &__text {
+        font-family: Larsseit_bold, sans-serif;
+        font-size: 2.25rem;
+        line-height: 1.5em;
+        letter-spacing: -0.01em;
+        color: inherit;
+        margin-bottom: 4.22em;
     }
 
-    &__item {
-        padding-top: 4.5rem;
-        padding-left: 4.88rem;
-        padding-right: 3.13rem;
+    &__text-link {
+        color: #6CD3E1;
     }
 
-    &__item:first-child {
-        background-color: #FFE2DE;
+    &__link {
+        color: #FAB63E;
+    }
+}
+
+.candidates {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    color: $light;
+
+    &__description {
+        background-color: #22356F;
+        ;
     }
 
-    &__item:nth-child(2) {
-        background-color: #C4E769;
-    }
-
-    &__item:nth-child(3) {
-        background-color: #62D0DF;
-    }
-
-    &__item:last-child {
-        background-color: #0052C1;
+    &__title {
+        margin-bottom: 14.3em;
     }
 
     &__slogan {
-        display: inline-block;
         font-family: Larsseit_bold, sans-serif;
-        color: $light;
-        font-size: 2rem;
-        line-height: 1.2em;
-        letter-spacing: -0.006em;
-        padding-top: 0.72em;
-        position: relative;
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -25.5px;
-            height: 1px;
-            width: 255px;
-            background-color: #fff;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            left: -20px;
-            top: 33px;
-            background-color: #E9B730;
-            width: 9px;
-            height: 9px;
-            border-radius: 50%;
-        }
+        font-size: 4rem;
+        line-height: 1.25em;
+        margin-bottom: 1.07em;
     }
 
-    &__items--big {
-        display: grid;
-        grid-template-columns: repeat(3, 480px);
-        grid-auto-rows: 480px;
+    &__text {
+        font-family: Larsseit_regular, sans-serif;
+        font-size: 2.25rem;
+        line-height: 1.55em;
+        max-width: 36.19rem;
+        margin-bottom: 1.67em;
     }
 
-    &__item--big {
-        padding-top: 6rem;
-        padding-left: 6.5rem;
-        padding-right: 13.69rem;
-    }
-
-    &__item--big:first-child {
-        background-color: #22356F;
-    }
-
-    &__item--big:nth-child(2) {
-        background-color: #0052C1;
-    }
-
-    &__item--big:nth-child(3) {
-        background: url(../images/planning-img.png) no-repeat;
-    }
-
-    &__item--big:nth-child(4) {
-        background-color: #62D0DF;
-    }
-
-    &__item--big:nth-child(5) {
-        background-color: #DEE1FF;
-    }
-
-    &__item--big:last-child {
-        background-color: #8F00FF;
-    }
-
-    &__slogan--big {
-        padding-top: 0.94em;
-        position: relative;
-    }
-
-    &__slogan.planning__slogan--big{
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -34px;
-            height: 1px;
-            width: 340px;
-            background-color: #fff;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            left: -30px;
-            top: 40px;
-            background-color: #E9B730;
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-        } 
+    &__link {
+        color: #62D0DF;
     }
 }
 
