--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,7 +17,7 @@
     grid-area: header;
 
     &__container {
-               margin-left: 11.2rem;
+        margin-left: 11.2rem;
         margin-right: 8.1rem;
         padding-top: 1.7rem;
         display: flex;
@@ -477,6 +477,56 @@
 
     &__link {
         color: #62D0DF;
+    }
+}
+
+.contacts {
+    display: grid;
+    grid-template: 1fr / auto 1fr;
+    grid-auto-flow: row;
+    font-size: 0.875rem;
+
+    &__items {
+        display: grid;
+        max-width: 765px;
+        padding-top: 6.1rem;
+        padding-left: 4.25rem;
+        grid-template: auto / repeat(3, 1fr);
+        column-gap: 1.4rem;
+    }
+
+    &__item-title {
+        font-size: inherit;
+        letter-spacing: -0.006em;
+        color: $default;
+        text-transform: uppercase;
+        margin-bottom: 3.9em;
+    }
+
+    &__item-text {
+        max-width: 75%;
+        font-size: inherit;
+        line-height: 1.79;
+        letter-spacing: -0.006em;
+        color: rgba(34, 53, 111, 0.5);
+
+        &>span {
+            display: block;
+        }
+    }
+
+    &__item-links {
+        padding-top: 2.14em;
+        // font-size: 0.875rem;
+    }
+
+    &__item-link {
+        display: inline-block;
+        font-size: inherit;
+    }
+
+    &__item-link--email {
+        padding-top: 0.7em;
     }
 }
 
