added media, and burger-btn

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,65 +3,79 @@
 // min:0.8rem + 0.225% from width devaice (13.4px)..... for devaice 1440 px: 0.8 rem (12.8px)+ 0.225% from 1440 px (3.2px)= 16px (1rem)
 :root {
     font-size: calc(0.8rem + 0.225vw);
-}
 
-body{
-    color: $default;
-    font-family: Larsseit_bold, sans-serif;
-}
+    @media (min-width:1440px) {
+        font-size: 1em;
+    }
 
-.container-fluid {
-    max-width: 1440px;
-    // max-width: 100wh;
-    // padding-left: 1px;
-    // padding-right: 1px;
-    margin: 0 auto;
-    
-}
-
-.title {
-    @extend %title-font;
-}
-
-.logo__link {
-    font-family: Larsseit_bold, sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.4em;
-    letter-spacing: -0.035em;
-    color: #62D0DF;
-}
-
-.section__link{
-    font-family: Larsseit_bold, sans-serif;
-    font-size: 1rem;
-    line-height: 1.25em;
-}
-
-// !
-.section__description{
-    padding-top: 10.75%;
-      padding-right: 18.29%;
-    padding-bottom: 5.25%;
-}
-
-// width = height
-
-.planning__item-wrap{
-    position: relative;
-    
-
-    &::before{
-        content: '';
-        display: block;
-        padding-bottom: 100%;
+    @media (max-width:1023px) {
+        font-size: calc(1rem + 0.225vw);
     }
 }
 
-.square{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
+    body {
+        color: $default;
+        font-family: Larsseit_bold, sans-serif;
+    }
 
+    .container-fluid {
+        // max-width: 2400px;
+        max-width: 1440px;
+        // max-width: 100wh;
+        // padding-left: 1px;
+        // padding-right: 1px;
+        margin: 0 auto;
+
+    }
+
+    .title {
+        @extend %title-font;
+    }
+
+    .logo__link {
+        font-family: Larsseit_bold, sans-serif;
+        font-size: 1.5rem;
+        line-height: 1.4em;
+        letter-spacing: -0.035em;
+        color: #62D0DF;
+    }
+
+    .section__link {
+        font-family: Larsseit_bold, sans-serif;
+        font-size: 1rem;
+        line-height: 1.25em;
+    }
+
+    // !
+    .section__description {
+        padding-top: 10.75%;
+        padding-right: 18.29%;
+        padding-bottom: 5.25%;
+    }
+
+    // width = height
+
+    .planning__item-wrap {
+        position: relative;
+
+
+        &::before {
+            content: '';
+            display: block;
+            padding-bottom: 100%;
+        }
+    }
+
+    .square {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+
+    .section__img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
