--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,8 @@
+@import 'reset';
 @import 'fonts';
 @import 'global';
-@import 'reset';
 @import 'vars';
+@import 'burger';
 
 .wrapper {
     display: grid;
@@ -13,8 +14,8 @@
 }
 
 .header {
-    display: grid;
     grid-area: header;
+    font-size: 0.875rem;
 
     &__container {
         margin-left: 11.2rem;
@@ -22,6 +23,10 @@
         padding-top: 1.7rem;
         display: flex;
         justify-content: space-between;
+
+        @media (max-width:1023px){
+            align-items: center;
+        }
     }
 
     &__logo {
@@ -33,7 +38,7 @@
         text-transform: uppercase;
         color: $light;
         font-family: Larsseit_bold, sans-serif;
-        font-size: 0.9rem;
+        // font-size: 0.875rem;
         line-height: 0.9;
         padding: 1.3em 1.9em;
         background-color: #62D0DF;
@@ -41,13 +46,23 @@
     }
 }
 
+@media (max-width:1023px) {
+    .menu {
+        display: none;
+    }
+}
+
 .menu__list {
     display: flex;
-    max-width: 16.64em;
+    max-width: 19em;
     padding-top: 0.9em;
 
+    @media (max-width:1279px) {
+        max-width: 22em;
+    }
+
     &-link {
-        font-size: 0.9rem;
+        // font-size: 0.875rem;
         line-height: 1.1;
         color: inherit;
         padding-left: 0.9em;
@@ -196,20 +211,20 @@
 
     }
 
-    &__img-wrap {
-        position: relative;
-        padding: 0 0 90% 0;
-    }
+    // &__img-wrap {
+    //     position: relative;
+    //     padding: 0 0 90% 0;
+    // }
 
-    &__img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    // &__img {
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     object-fit: cover;
 
-    }
+    // }
 }
 
 .about {
@@ -241,8 +256,7 @@
 
     &__items {
         display: grid;
-        grid-template-columns: repeat(4, 25%);
-        // grid-auto-rows: 360px;
+        grid-template-columns: repeat(4, 1fr);
         margin-bottom: 7.5rem;
 
     }
@@ -250,7 +264,7 @@
     &__item--small {
         padding-top: 4.5rem;
         padding-left: 4.88rem;
-        padding-right: 3.13rem;
+        padding-right: 1rem;
     }
 
     &__item-wrap--small:first-child .planning__item--small {
@@ -412,6 +426,8 @@
     //     height: 100%;
     //     object-fit: cover;
     // }
+
+
     &__description {
         padding-left: 11.08%;
     }
@@ -539,6 +555,3 @@
         }
     }
 }
-
-
-@import 'media'
