--- a/app/scss/_burger.scss
+++ b/app/scss/_burger.scss
@@ -1,7 +1,7 @@
 .burger-btn {
     display: none;
-    width: 64px;
-    height: 64px;
+    width: 5em;
+    height: 5em;
     background-color: #62D0DF;
     border: transparent;
     border-radius: 50%;
@@ -10,11 +10,11 @@
     &__line {
         position: absolute;
         left: 50%;
-        margin-left: -13px;
-        margin-top: -1px;
+        margin-left: -20px;
+        margin-top: -2px;
         top: 50%;
-        width: 28px;
-        height: 2px;
+        width: 40px;
+        height: 4px;
         background-color: $light;
         border-radius: 10px;
 
@@ -24,11 +24,11 @@
             display: block;
             position: absolute;
             left: 50%;
-            margin-left: -14px;
-            margin-top: -1px;
+            margin-left: -20px;
+            margin-top: -2px;
             top: 50%;
-            width: 28px;
-            height: 2px;
+            width: 100%;
+            height: 4px;
             background-color: $light;
             border-radius: 10px;
             transition: .3s;
@@ -36,11 +36,11 @@
 
         &::before {
             transform: translateY(-8px);
-        }
+                  }
 
         &::after {
             transform: translateY(8px);
-        }
+                   }
     }
 
     &.active .burger-btn__line {
@@ -55,8 +55,10 @@
         transform: rotate(-45deg);
     }
 
-    @media (max-width:1023px) {
+    @media (max-width:767px) {
         & {
+            width: 3.74em;
+            height: 3.74em;
             display: block;
             order: 3;
         }
