--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 .header {
     grid-area: header;
     font-size: 0.875rem;
+    position: relative;
 
     &__container {
         margin-left: 11.2rem;
@@ -24,9 +25,13 @@
         display: flex;
         justify-content: space-between;
 
-        @media (max-width:1023px){
+        @media (max-width:1023px) {
             align-items: center;
+            margin-left: 2rem;
+            margin-right: 2rem;
+            font-size: 1.2rem;
         }
+
     }
 
     &__logo {
@@ -46,9 +51,23 @@
     }
 }
 
-@media (max-width:1023px) {
+@media (max-width:767px) {
     .menu {
-        display: none;
+        position: absolute;
+        padding-right: 0;
+        width: 55%;
+        height: auto;
+        text-align: center;
+        transform: translateY(-350px);
+        transition: all .5s;
+        right: 19%;
+        background-color: #62D0DF;
+        color: $light;
+        box-shadow: -2px 3px 17px 0px #000;
+
+        &--open {
+            transform: translateY(257px);
+        }
     }
 }
 
@@ -57,8 +76,14 @@
     max-width: 19em;
     padding-top: 0.9em;
 
-    @media (max-width:1279px) {
-        max-width: 22em;
+    @media (max-width:1023px) {
+        max-width: 25em;
+        padding-top: 0;
+    }
+
+    @media (max-width:767px) {
+        max-width: 100%;
+        flex-direction: column;
     }
 
     &-link {
@@ -68,6 +93,12 @@
         padding-left: 0.9em;
         padding-right: 0.9em;
         padding-bottom: 0.9em;
+
+        @media (max-width:767px) {
+            padding-top: 1em;
+            display: inline-block;
+            width: 100%;
+        }
     }
 
     &-link--active {
@@ -81,6 +112,10 @@
             right: 0;
             height: 0.1em;
             background-color: $default;
+
+            @media (max-width:767px){
+                background-color: $light;
+            }
         }
     }
 
@@ -90,6 +125,18 @@
         &:hover {
             opacity: 0.8;
         }
+
+        @media (max-width:767px) {
+            padding-bottom: 2em;
+            font-size: 1.5rem;
+        }
+
+        @media (max-width:767px) {
+            &:first-child {
+                padding-top: 2em;
+            }
+        }
+
     }
 }
 
