--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -54,21 +54,30 @@
 @media (max-width:767px) {
     .menu {
         position: absolute;
+        bottom: 150%;
+        left: 24%;
         padding-right: 0;
-        width: 55%;
+        width: 60%;
         height: auto;
         text-align: center;
-        transform: translateY(-350px);
+
         transition: all .5s;
         right: 19%;
         background-color: #62D0DF;
         color: $light;
         box-shadow: -2px 3px 17px 0px #000;
 
-        &--open {
-            transform: translateY(257px);
+
+        &.active {
+            // transform: translate(35px, 257px);
+            bottom: -430%;
+
         }
     }
+
+    // .menu.menu--open{
+    //     transform: translateY(35px, 257px); 
+    // }
 }
 
 .menu__list {
@@ -113,7 +122,7 @@
             height: 0.1em;
             background-color: $default;
 
-            @media (max-width:767px){
+            @media (max-width:767px) {
                 background-color: $light;
             }
         }
