--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -159,6 +159,12 @@
         display: grid;
         grid-template: minmax(765px, auto) / repeat(auto-fit, minmax(500px, 1fr));
         overflow-x: clip;
+
+        @media (max-width:1172px) {
+            margin-left: 0;
+            grid-template: repeat(2, auto) / 1fr;
+            justify-items: center;
+        }
     }
 
     &__content {
@@ -167,6 +173,10 @@
         grid-template: minmax(64px, auto) 1fr minmax(161px, auto) 1fr / 1fr;
         margin-top: 10.2rem;
         padding-bottom: 4.7em;
+
+        @media (max-width:1172px) {
+            margin-top: 8rem;
+        }
 
     }
 
@@ -181,6 +191,10 @@
         @extend %text-font;
         line-height: 1.9;
         max-width: 19.7em;
+
+        @media (max-width:1172px) {
+            max-width: 25em;
+        }
     }
 
     &__links {
@@ -215,6 +229,13 @@
         transform: rotate(329deg) translate(-35px, 0px);
         z-index: -1;
         position: relative;
+
+        @media (max-width:1172px) {
+            overflow: visible;
+            height: 770px;
+            width: 100%;
+            transform: initial;
+        }
     }
 
     &__img-container {
@@ -224,6 +245,12 @@
         background-repeat: no-repeat;
         transform: rotate(32deg) translate(-380px, 4px);
         background-size: cover;
+
+        @media (max-width:1172px) {
+            width: 100%;
+            height: 100%;
+            transform: initial;
+        }
     }
 }
 
