corrected @media description, added @media cause

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,12 +8,12 @@
         font-size: 1em;
     }
 
-    @media (max-width:1023px) {
-        font-size: calc(1rem + 0.225vw);
-    }
-    @media (max-width:1023px) {
-        font-size: calc(1.2rem + 0.225vw);
-}
+    // @media (max-width:1023px) {
+    //     font-size: calc(1rem + 0.225vw);
+    // }
+//     @media (max-width:1023px) {
+//         font-size: calc(1.2rem + 0.225vw);
+// }
 }
 
     body {
@@ -42,9 +42,9 @@
         letter-spacing: -0.035em;
         color: #62D0DF;
 
-        @media (max-width:1023px){
-            font-size: 2rem;
-        }
+        // @media (max-width:1023px){
+        //     font-size: 2rem;
+        // }
     }
 
     .section__link {
