--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -18,6 +18,14 @@
     font-size: 0.875rem;
     position: relative;
 
+    @media (max-width:1279px) {
+        font-size: 1rem;
+    }
+
+    @media (max-width:1023px) {
+        font-size: 1.2rem;
+    }
+
     &__container {
         margin-left: 11.2rem;
         margin-right: 8.1rem;
@@ -29,7 +37,7 @@
             align-items: center;
             margin-left: 2rem;
             margin-right: 2rem;
-            font-size: 1.2rem;
+
         }
 
     }
@@ -55,7 +63,7 @@
     .menu {
         position: absolute;
         bottom: 150%;
-        left: 24%;
+        left: 22%;
         padding-right: 0;
         width: 60%;
         height: auto;
@@ -154,28 +162,29 @@
 }
 
 .description {
-    &__container {
-        margin-left: 11.2rem;
-        display: grid;
-        grid-template: minmax(765px, auto) / repeat(auto-fit, minmax(500px, 1fr));
-        overflow-x: clip;
+    @media (min-width:1173px) {
+        &__container {
+            margin-left: 11.2rem;
+            display: grid;
+            grid-template: minmax(765px, auto) / repeat(auto-fit, minmax(500px, 1fr));
+            overflow-x: clip;
+        }
 
         @media (max-width:1172px) {
             margin-left: 0;
-            grid-template: repeat(2, auto) / 1fr;
-            justify-items: center;
         }
     }
 
     &__content {
         display: grid;
         grid-auto-flow: row;
-        grid-template: minmax(64px, auto) 1fr minmax(161px, auto) 1fr / 1fr;
+        grid-template: minmax(4em, auto) minmax(10.4em, auto) minmax(7.5em, auto) 1fr/1fr;
         margin-top: 10.2rem;
         padding-bottom: 4.7em;
 
         @media (max-width:1172px) {
             margin-top: 8rem;
+            padding-left: 14%;
         }
 
     }
@@ -232,9 +241,11 @@
 
         @media (max-width:1172px) {
             overflow: visible;
-            height: 770px;
+            // max-height: 770px;
             width: 100%;
             transform: initial;
+            padding: 0 0 90% 0;
+            margin-top: -18em;
         }
     }
 
@@ -248,18 +259,23 @@
 
         @media (max-width:1172px) {
             width: 100%;
-            height: 100%;
+            height: 65%;
             transform: initial;
+            position: absolute;
+            left: 0;
+            bottom: 0;
         }
     }
 }
 
 .cause {
 
-    &__container {
-        margin-left: 11.2rem;
-        display: grid;
-        grid-template: 1fr / 58.5% minmax(525px, 1fr);
+    @media (min-width:1173px) {
+        &__container {
+            margin-left: 11.2rem;
+            display: grid;
+            grid-template: 1fr / 58.5% minmax(525px, 1fr);
+        }
     }
 
     &__description {
@@ -269,6 +285,13 @@
         padding-right: 1rem;
         padding-left: 11.2rem;
         margin-left: -11.2rem;
+
+        @media (max-width:1172px) {
+            padding-right: 0;
+            padding-left: 14%;
+            margin-left: 0;
+        }
+
     }
 
     &__slogan {
@@ -278,6 +301,11 @@
         letter-spacing: -0.006em;
         padding-top: 4.19em;
         padding-bottom: 2.08em;
+
+        @media (max-width:1172px){
+            padding-top: 3em;
+            padding-bottom: 2em;
+        }
     }
 
     &__text {
@@ -286,6 +314,10 @@
         line-height: 1.58;
         padding-bottom: 5.75rem;
         max-width: 34.5rem;
+
+        @media (max-width:1172px) {
+            max-width: 25em;
+        }
     }
 
     &__text--small {
@@ -294,20 +326,16 @@
 
     }
 
-    // &__img-wrap {
-    //     position: relative;
-    //     padding: 0 0 90% 0;
-    // }
+    &__img-wrap {
+        position: relative;
+        padding: 0 0 70% 0;
+    }
 
-    // &__img {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     object-fit: cover;
-
-    // }
+    &__img {
+        position: absolute;
+        top: 0;
+        left: 0;
+           }
 }
 
 .about {
