--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -61,7 +61,6 @@
     }
 
     // width = height
-
     .planning__item-wrap {
         position: relative;
 
@@ -80,6 +79,7 @@
         bottom: 0;
         left: 0;
     }
+    // width = height
 
     .section__img {
         height: 100%;
