--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -382,12 +382,21 @@
         grid-template-columns: repeat(4, 1fr);
         margin-bottom: 7.5rem;
 
+        @media (max-width:1023px) {
+            grid-template-columns: repeat(2, 2fr);
+            margin-bottom: 3.5rem;
+        }
+
     }
 
     &__item--small {
         padding-top: 4.5rem;
         padding-left: 4.88rem;
-        padding-right: 1rem;
+        padding-right: 0.5rem;
+
+        @media (max-width:1023px) {
+            padding-top: 9.5rem;
+        }
     }
 
     &__item-wrap--small:first-child .planning__item--small {
@@ -408,7 +417,7 @@
 
     &__slogan {
         display: inline-block;
-        max-width: 255px;
+        max-width: 97%;
         width: 100%;
         color: $light;
         font-size: 2rem;
@@ -416,6 +425,11 @@
         letter-spacing: -0.006em;
         padding-top: 0.72em;
         position: relative;
+
+        @media (max-width:1023px) {
+            font-size: calc(2rem * 1.5);
+            padding-top: calc(0.72em / 1.5);
+        }
 
         &::before {
             content: '';
@@ -436,19 +450,35 @@
             width: 9px;
             height: 9px;
             border-radius: 50%;
+
+            @media (max-width:1023px) {
+                width: calc(9px * 1.5);
+                height: calc(9px * 1.5);
+                left: -27px;
+            }
         }
     }
 
     &__items--big {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        // grid-auto-rows: 480px;
+
+        @media (max-width:1023px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
     }
 
     &__item--big {
         padding-top: 6rem;
         padding-left: 6.5rem;
         padding-right: 2rem;
+
+        @media (max-width:1023px) {
+            padding-top: 9.5rem;
+            padding-left: 4.88rem;
+            padding-right: 0.5rem;
+        }
     }
 
     &__item-wrap--big:first-child .planning__item--big {
@@ -478,9 +508,13 @@
 
     &__slogan--big {
         padding-top: 0.94em;
-        max-width: 340px;
+        max-width: 99%;
         width: 100%;
         position: relative;
+
+        @media (max-width:1023px) {
+            padding-top: calc(0.94em / 1.5);
+        }
     }
 
     &__slogan.planning__slogan--big {
@@ -503,18 +537,28 @@
             width: 12px;
             height: 12px;
             border-radius: 50%;
+
+
+            @media (max-width:1023px) {
+                width: calc(9px * 1.5);
+                height: calc(9px * 1.5);
+                left: -27px;
+            }
         }
     }
 
     &__cards {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+
+        // @media (max-width:1023px) {
+        //     grid-template-columns: repeat(2, 1fr);
+        // }
     }
 
     &__card {
-        display: grid;
         padding: 3.44rem 4.81rem 4.81rem 6.56rem;
-        font-family: Larsseit_regular, sans-serif
+        font-family: Larsseit_regular, sans-serif;
     }
 
     &__card-title {
