--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -69,6 +69,10 @@
             content: '';
             display: block;
             padding-bottom: 100%;
+
+            @media (max-width:1023px){
+                padding-bottom: 50%;
+            }
         }
     }
 
