--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,7 +22,7 @@
         font-size: 1rem;
     }
 
-    @media (max-width:1023px) {
+    @media (max-width:1024px) {
         font-size: 1.2rem;
     }
 
@@ -33,7 +33,7 @@
         display: flex;
         justify-content: space-between;
 
-        @media (max-width:1023px) {
+        @media (max-width:1024px) {
             align-items: center;
             margin-left: 2rem;
             margin-right: 2rem;
@@ -63,9 +63,9 @@
     .menu {
         position: absolute;
         bottom: 150%;
-        left: 22%;
+        left: 0;
         padding-right: 0;
-        width: 60%;
+        width: 70%;
         height: auto;
         text-align: center;
 
@@ -93,7 +93,7 @@
     max-width: 19em;
     padding-top: 0.9em;
 
-    @media (max-width:1023px) {
+    @media (max-width:1024px) {
         max-width: 25em;
         padding-top: 0;
     }
@@ -378,15 +378,17 @@
     }
 
     &__items {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        margin-bottom: 7.5rem;
 
-        @media (max-width:1023px) {
+        @media (min-width:768px) {
+            display: grid;
             grid-template-columns: repeat(2, 2fr);
             margin-bottom: 3.5rem;
         }
 
+        @media (min-width:1024px) {
+            grid-template-columns: repeat(4, 1fr);
+            margin-bottom: 7.5rem;
+        }
     }
 
     &__item--small {
@@ -394,8 +396,16 @@
         padding-left: 4.88rem;
         padding-right: 0.5rem;
 
-        @media (max-width:1023px) {
-            padding-top: 9.5rem;
+        @media (max-width:767px) {
+            padding-top: 8rem;
+        }
+
+        @media (max-width:550px) {
+            padding-top: 5rem;
+        }
+
+        @media (max-width:434px) {
+            padding-top: 2rem;
         }
     }
 
@@ -426,7 +436,7 @@
         padding-top: 0.72em;
         position: relative;
 
-        @media (max-width:1023px) {
+        @media (max-width:767px) {
             font-size: calc(2rem * 1.5);
             padding-top: calc(0.72em / 1.5);
         }
@@ -451,7 +461,7 @@
             height: 9px;
             border-radius: 50%;
 
-            @media (max-width:1023px) {
+            @media (max-width:767px) {
                 width: calc(9px * 1.5);
                 height: calc(9px * 1.5);
                 left: -27px;
@@ -460,13 +470,16 @@
     }
 
     &__items--big {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-
-        @media (max-width:1023px) {
+  @media (min-width:768px) {
+            display: grid;
             grid-template-columns: repeat(2, 1fr);
         }
 
+        @media (min-width:1024px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+      
     }
 
     &__item--big {
@@ -474,10 +487,22 @@
         padding-left: 6.5rem;
         padding-right: 2rem;
 
-        @media (max-width:1023px) {
-            padding-top: 9.5rem;
+        @media (max-width:1024px){
+            padding-top: 4.5rem;
+        }
+
+        @media (max-width:767px) {
+            padding-top: 8rem;
             padding-left: 4.88rem;
             padding-right: 0.5rem;
+
+            @media (max-width:550px) {
+                padding-top: 5rem;
+            }
+
+            @media (max-width:434px) {
+                padding-top: 2rem;
+            }
         }
     }
 
@@ -492,6 +517,11 @@
     &__item-wrap--big:nth-child(3) .planning__item--big {
         background: url(../images/planning-img.png) no-repeat;
         background-size: 100% 100%;
+
+        @media (max-width:1024px) {
+            background-position-y: center;
+            background-size: cover;
+        }
     }
 
     &__item-wrap--big:nth-child(4) .planning__item--big {
@@ -512,7 +542,7 @@
         width: 100%;
         position: relative;
 
-        @media (max-width:1023px) {
+        @media (max-width:767px) {
             padding-top: calc(0.94em / 1.5);
         }
     }
@@ -539,7 +569,7 @@
             border-radius: 50%;
 
 
-            @media (max-width:1023px) {
+            @media (max-width:1024px) {
                 width: calc(9px * 1.5);
                 height: calc(9px * 1.5);
                 left: -27px;
@@ -548,29 +578,55 @@
     }
 
     &__cards {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-
-        // @media (max-width:1023px) {
-        //     grid-template-columns: repeat(2, 1fr);
-        // }
+  @media (min-width:767px) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);           
+        }
+        @media (min-width:1024px){
+            grid-template-columns: repeat(3, 1fr);
+        margin-bottom: 2.8%;
+        }       
     }
 
     &__card {
-        padding: 3.44rem 4.81rem 4.81rem 6.56rem;
+        padding: 16% 16% 7.7% 21.9%;
         font-family: Larsseit_regular, sans-serif;
+
+        @media (max-width:1024px) {
+            padding: 10% 10% 7.7% 15%;
+        }
+
+        @media (max-width:767px) {
+            padding: 5% 10% 3% 15%;
+        }
+
     }
+
+
 
     &__card-title {
         font-size: 1.75rem;
         line-height: 1.25;
         margin-bottom: 1.75em;
+
+        @media (max-width:767px) {
+            margin-bottom: 1em;
+        }
     }
 
     &__card-text {
         line-height: 1.69;
         letter-spacing: -0.03em;
         color: rgba(34, 53, 111, 0.5);
+
+        @media (max-width:1024px) {
+            font-size: 1.2rem;
+        }
+
+        @media (max-width:767px) {
+            font-size: 1.5rem;
+        }
+
 
     }
 }
@@ -709,16 +765,20 @@
 
 
 .footer {
-    display: grid;
     grid-area: footer;
     background-color: #62D0DF;
     color: $light;
     padding: 2em 0 1.625em 11.2em;
 
     &__copy {
+        position: relative;
+
         &>span {
-            display: inline-block;
-            margin-right: 0.4em;
+            position: absolute;
+            // display: inline-block;
+            left: -1.1em;
+            top: 8%;
+
         }
     }
 }
